--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ TEMP_FILENAME=archive.zip
 GITHUB_PAT=your_access_token_here
 GITHUB_USER=benallen-dev
 GITHUB_REPO=benallen-dot-dev
+
+DEPLOY_SECRET=YourSecretHere
